+check statistic
